# deployed_CLV

./: .dockerignore  .env.example  .fastapicloudignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  config.yaml  deploy-azure-cli.sh  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/: churn_probabilities.csv  clv_predictions.csv  customer_recommendations.csv  lightgbm_feature_importance.csv  lightgbm_model_comparison.json  lightgbm_predictions.csv  metadata.json
models/lightgbm_registry/champion/: lightgbm_churn_model.joblib
models/lightgbm_registry/runs/20260528203026/: lightgbm_clv_model.joblib  model_comparison.json  predictions.csv
notebooks/: CLV_prediction_optimised.ipynb
scripts/: local_test.py  run_api.py  run_pipeline.py
src/: __init__.py  advanced_modeling.py  api.py  clv_modeling.py  clv_pipeline.py  dashboard_app.py  data_ingestion.py  data_preprocessing.py  recommendations.py  segmentation.py
src/model_artifacts/: __init__.py  current_state_segment_summary.csv  customer_segments.csv
tests/: test_data_ingestion.py  test_data_preprocessing.py
