[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clv-prediction"
version = "0.1.0"
description = "Customer Lifetime Value Prediction System"
authors = [
    {name = "Helen Soremekun", email = "your.email@example.com"}
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.2.0",
    "lightgbm>=4.0.0",
    "joblib>=1.3.0",
    "lifetimes>=0.11.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "sqlalchemy>=1.4.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mlflow>=2.0.0",
    "fastapi[standard]>=0.100.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "psycopg2-binary>=2.9.0"
]
requires-python = "==3.12.*"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.model_artifacts" = ["*.csv", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.fastapi]
entrypoint = "src.api:app"
